--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "airbnb-scraper",
   "version": "1.0.0",
   "main": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
